chore: Update Maven compiler version to 11 and adjust configuration