@@ -16,8 +16,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <maven.version>3.6.0</maven.version>
         <maven-plugin-plugin.version>3.6.4</maven-plugin-plugin.version>
     </properties>
@@ -99,14 +99,22 @@
 
     <build>
         <plugins>
-            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>${maven.compiler.target}</release>
+                    <compilerArgs>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.apache.maven.plugin-tools</groupId>
+                            <artifactId>maven-plugin-annotations</artifactId>
+                            <version>${maven-plugin-plugin.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
@@ -181,18 +189,5 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
-    <developers>
-        <developer>
-            <id>t-izuno</id>
-            <name>T. Izuno</name>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>scm:git:git://github.com/t-izuno/spellcheck-maven-plugin.git</connection>
-        <developerConnection>scm:git:ssh://github.com/t-izuno/spellcheck-maven-plugin.git</developerConnection>
-        <url>https://github.com/t-izuno/spellcheck-maven-plugin</url>
-    </scm>
 
 </project>
